# partitioned

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs  partitioned.rs  zip_with_next.rs
src/iter/: mod.rs  partitioned.rs  zip_with_next.rs
src/stream/: mod.rs  zip_with_next.rs
